force-app/main/default/objects/AccidentReception_Management__c/fields/ContactDateSVF__c.field-meta.xml
<CustomField>
    <fullName>ContactDateSVF__c</fullName>
    <formula>IF (NOT ( ISBLANK (  ContactDateW__c ) ),  TEXT(MONTH(ContactDate__c ))&amp;&quot;月&quot;&amp;TEXT(DAY(ContactDate__c ))&amp;&quot;日&quot;&amp;&quot;（&quot;&amp; ContactDateWeek__c&amp;&quot;）&quot; , &quot;確認事項がある場合のみ連絡する旨を案内&quot;)</formula>
    <label>連絡日SVF</label>
    <type>Text</type>
</CustomField>