force-app/main/default/objects/AccidentReception_Management__c/fields/ContactDateT__c.field-meta.xml
<CustomField>
    <fullName>ContactDateT__c</fullName>
    <label>連絡日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>