force-app/main/default/objects/AccidentReception_Management__c/fields/ContactDateWeek__c.field-meta.xml
<CustomField>
    <fullName>ContactDateWeek__c</fullName>
    <formula>IF ( NOT ( ISBLANK (  ContactDate__c ) ), CASE ( MOD ( ContactDate__c - DATE (1900, 1, 7), 7 ), 0, &quot;日&quot;, 1, &quot;月&quot;, 2, &quot;火&quot;, 3, &quot;水&quot;, 4, &quot;木&quot;, 5, &quot;金&quot;, &quot;土&quot;), &quot;&quot;)</formula>
    <label>連絡日（曜日）</label>
    <type>Text</type>
</CustomField>