force-app/main/default/objects/AccidentReception_Management__c/fields/ContractorName__c.field-meta.xml
<CustomField>
    <fullName>ContractorName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コールデータ情報</label>
    <referenceTo>AccidentReception_CallData__c</referenceTo>
    <relationshipLabel>事故受付・伝言管理</relationshipLabel>
    <relationshipName>Contact_Manegement</relationshipName>
    <type>Lookup</type>
</CustomField>