force-app/main/default/objects/AccidentReception_Management__c/fields/ContractorNameInput1__c.field-meta.xml
<CustomField>
    <fullName>ContractorNameInput1__c</fullName>
    <label>契約者名①</label>
    <length>50</length>
    <type>Text</type>
</CustomField>