force-app/main/default/objects/AccidentReception_Management__c/fields/ContractorNameInput2__c.field-meta.xml
<CustomField>
    <fullName>ContractorNameInput2__c</fullName>
    <label>契約者名②</label>
    <length>50</length>
    <type>Text</type>
</CustomField>