force-app/main/default/objects/AccidentReception_Management__c/fields/ContractorNameMsg__c.field-meta.xml
<CustomField>
    <fullName>ContractorNameMsg__c</fullName>
    <label>契約者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>