force-app/main/default/objects/AccidentReception_Management__c/fields/ContractorNumberInput__c.field-meta.xml
<CustomField>
    <fullName>ContractorNumberInput__c</fullName>
    <label>契約者TEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>