force-app/main/default/objects/AccidentReception_Management__c/fields/ContractTo__c.field-meta.xml
<CustomField>
    <fullName>ContractTo__c</fullName>
    <label>期間(To)</label>
    <type>Date</type>
</CustomField>