force-app/main/default/objects/AccidentReception_Management__c/fields/DamagedPart__c.field-meta.xml
<CustomField>
    <fullName>DamagedPart__c</fullName>
    <label>損傷箇所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>