force-app/main/default/objects/AccidentReception_Management__c/fields/DamageMemo__c.field-meta.xml
<CustomField>
    <fullName>DamageMemo__c</fullName>
    <label>被害物［メモ］</label>
    <length>255</length>
    <type>Text</type>
</CustomField>