force-app/main/default/objects/AccidentReception_Management__c/fields/DateConfirmed__c.field-meta.xml
<CustomField>
    <fullName>DateConfirmed__c</fullName>
    <formula>IF ( TEXT(PersonInfoConfirm__c ) = &quot;案内のうえ了承済み&quot; , IF ( AND ( ConfirmationDate__c &gt;= DATE (1868,09,08), ConfirmationDate__c &lt;= DATE (1912,07,29)), &quot;M&quot; &amp; TEXT ( YEAR ( ConfirmationDate__c ) - 1867 ) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( ConfirmationDate__c )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( ConfirmationDate__c )) , IF ( AND ( ConfirmationDate__c &gt;= DATE (1912,07,30), ConfirmationDate__c &lt;= DATE (1926,12,24)), &quot;T&quot; &amp; TEXT ( YEAR ( ConfirmationDate__c ) - 1911) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( ConfirmationDate__c )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( ConfirmationDate__c )) , IF ( AND ( ConfirmationDate__c &gt;= DATE (1926,12,25), ConfirmationDate__c &lt;= DATE (1989,01,07)), &quot;S&quot; &amp; TEXT ( YEAR ( ConfirmationDate__c ) - 1925 ) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( ConfirmationDate__c )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( ConfirmationDate__c )) , IF ( AND ( ConfirmationDate__c &gt;= DATE (1989,01,08), ConfirmationDate__c &lt;= DATE (2019,04,30)), &quot;H&quot; &amp; TEXT ( YEAR ( ConfirmationDate__c ) - 1988 ) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( ConfirmationDate__c )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( ConfirmationDate__c )) , IF ( ConfirmationDate__c &gt;= DATE (2019,05,01), &quot;R&quot; &amp; TEXT ( YEAR ( ConfirmationDate__c) - 2018) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( ConfirmationDate__c )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( ConfirmationDate__c )) , &quot;&quot;))))), &quot;&quot;)</formula>
    <label>確認日（使用中）</label>
    <type>Text</type>
</CustomField>