force-app/main/default/objects/AccidentReception_Management__c/fields/DeclarationInformation2__c.field-meta.xml
<CustomField>
    <fullName>DeclarationInformation2__c</fullName>
    <label>申告情報②</label>
    <type>TextArea</type>
</CustomField>