force-app/main/default/objects/AccidentReception_Management__c/fields/DeclarationInformation3__c.field-meta.xml
<CustomField>
    <fullName>DeclarationInformation3__c</fullName>
    <label>申告情報③</label>
    <type>TextArea</type>
</CustomField>