force-app/main/default/objects/AccidentReception_Management__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>納車日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>