force-app/main/default/objects/AccidentReception_Management__c/fields/DepartmentNameInput1__c.field-meta.xml
<CustomField>
    <fullName>DepartmentNameInput1__c</fullName>
    <label>①（選択不可の場合）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>