force-app/main/default/objects/AccidentReception_Management__c/fields/DepartmentNameInput2__c.field-meta.xml
<CustomField>
    <fullName>DepartmentNameInput2__c</fullName>
    <label>②（選択不可の場合）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>