force-app/main/default/objects/AccidentReception_Management__c/fields/DepartmentNameInput3__c.field-meta.xml
<CustomField>
    <fullName>DepartmentNameInput3__c</fullName>
    <label>③（選択不可の場合）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>