force-app/main/default/objects/AccidentReception_Management__c/fields/DesiredContactDate__c.field-meta.xml
<CustomField>
    <fullName>DesiredContactDate__c</fullName>
    <label>連絡希望日</label>
    <type>Date</type>
</CustomField>