force-app/main/default/objects/AccidentReception_Management__c/fields/Destination2SVF__c.field-meta.xml
<CustomField>
    <fullName>Destination2SVF__c</fullName>
    <formula>IF ( destination2__r.Department__c =&quot;その他&quot; ||  ISBLANK(destination2__r.Department__c)   ,  DepartmentNameInput2__c ,  destination2__r.Name )</formula>
    <label>宛先②SVF</label>
    <type>Text</type>
</CustomField>