force-app/main/default/objects/AccidentReception_Management__c/fields/Destination3__c.field-meta.xml
<CustomField>
    <fullName>Destination3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>宛先③</label>
    <referenceTo>Destination3__c</referenceTo>
    <relationshipName>relation3</relationshipName>
    <type>Lookup</type>
</CustomField>