force-app/main/default/objects/AccidentReception_Management__c/fields/Destination3SVF__c.field-meta.xml
<CustomField>
    <fullName>Destination3SVF__c</fullName>
    <formula>IF ( Destination3__r.Department__c =&quot;その他&quot; || ISBLANK(Destination3__r.Department__c) , DepartmentNameInput3__c , Destination3__r.Name )</formula>
    <label>宛先③SVF</label>
    <type>Text</type>
</CustomField>