force-app/main/default/objects/AccidentReception_Management__c/fields/destination4__c.field-meta.xml
<CustomField>
    <fullName>destination4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>宛先④</label>
    <referenceTo>Destination4__c</referenceTo>
    <relationshipName>relation4</relationshipName>
    <type>Lookup</type>
</CustomField>