force-app/main/default/objects/AccidentReception_Management__c/fields/Destination4SVF__c.field-meta.xml
<CustomField>
    <fullName>Destination4SVF__c</fullName>
    <formula>IF ( destination4__r.Department__c =&quot;その他&quot; || ISBLANK(destination4__r.Department__c) , DepartmentNameInput4__c , destination4__r.Name )</formula>
    <label>宛先④SVF</label>
    <type>Text</type>
</CustomField>