force-app/main/default/objects/AccidentReception_Management__c/fields/DestinationAddress__c.field-meta.xml
<CustomField>
    <fullName>DestinationAddress__c</fullName>
    <label>送付先宛名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事故の契約者に同じ</fullName>
            </value>
            <value>
                <fullName>事故の入電者に同じ</fullName>
            </value>
            <value>
                <fullName>被保険者に同じ</fullName>
            </value>
            <value>
                <fullName>入電者に同じ</fullName>
                <isActive>false</isActive>
                <label>入電者に同じ</label>
            </value>
            <value>
                <fullName>契約者に同じ</fullName>
                <isActive>false</isActive>
                <label>契約者に同じ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>