force-app/main/default/objects/AccidentReception_Management__c/fields/DestinationLocation__c.field-meta.xml
<CustomField>
    <fullName>DestinationLocation__c</fullName>
    <label>被害物件住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>