force-app/main/default/objects/AccidentReception_Management__c/fields/DisasterChk__c.field-meta.xml
<CustomField>
    <fullName>DisasterChk__c</fullName>
    <label>災害チェック</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>