force-app/main/default/objects/AccidentReception_Management__c/fields/DisasterDetails__c.field-meta.xml
<CustomField>
    <fullName>DisasterDetails__c</fullName>
    <label>災害詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>