force-app/main/default/objects/AccidentReception_Management__c/fields/DisasterName__c.field-meta.xml
<CustomField>
    <fullName>DisasterName__c</fullName>
    <label>災害名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>