force-app/main/default/objects/AccidentReception_Management__c/fields/DisasterNumber__c.field-meta.xml
<CustomField>
    <fullName>DisasterNumber__c</fullName>
    <label>災害番号</label>
    <length>4</length>
    <type>Text</type>
</CustomField>