force-app/main/default/objects/AccidentReception_Management__c/fields/DisasterType__c.field-meta.xml
<CustomField>
    <fullName>DisasterType__c</fullName>
    <label>災害種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>台風</fullName>
            </value>
            <value>
                <fullName>地震</fullName>
            </value>
            <value>
                <fullName>暴風雨</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>