force-app/main/default/objects/AccidentReception_Management__c/fields/DisclosureContentMsg__c.field-meta.xml
<CustomField>
    <fullName>DisclosureContentMsg__c</fullName>
    <label>開示内容</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>