force-app/main/default/objects/AccidentReception_Management__c/fields/DriverAge__c.field-meta.xml
<CustomField>
    <fullName>DriverAge__c</fullName>
    <formula>FLOOR(( AccidentDateInput__c - DriverBirth__c )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>運転者の年齢</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>