force-app/main/default/objects/AccidentReception_Management__c/fields/DriverBirth__c.field-meta.xml
<CustomField>
    <fullName>DriverBirth__c</fullName>
    <label>生年月日（運転者）（西暦）</label>
    <type>Date</type>
</CustomField>