force-app/main/default/objects/AccidentReception_Management__c/fields/DriverNameInput__c.field-meta.xml
<CustomField>
    <fullName>DriverNameInput__c</fullName>
    <label>運転者氏名（漢字）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>