force-app/main/default/objects/AccidentReception_Management__c/fields/DriverNameKanaHishin__c.field-meta.xml
<CustomField>
    <fullName>DriverNameKanaHishin__c</fullName>
    <label>運転者氏名（カナ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>