force-app/main/default/objects/AccidentReception_Management__c/fields/DriverPhoneNumber1__c.field-meta.xml
<CustomField>
    <fullName>DriverPhoneNumber1__c</fullName>
    <label>連絡先①</label>
    <type>Phone</type>
</CustomField>