force-app/main/default/objects/AccidentReception_Management__c/fields/DriverPhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>DriverPhoneNumber2__c</fullName>
    <label>連絡先②</label>
    <type>Phone</type>
</CustomField>