force-app/main/default/objects/AccidentReception_Management__c/fields/EmployeeSubmissionMsg__c.field-meta.xml
<CustomField>
    <fullName>EmployeeSubmissionMsg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>社員提出</label>
    <type>Checkbox</type>
</CustomField>