force-app/main/default/objects/AccidentReception_Management__c/fields/EntrustCarName__c.field-meta.xml
<CustomField>
    <fullName>EntrustCarName__c</fullName>
    <label>受託車両（車名）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>