force-app/main/default/objects/AccidentReception_Management__c/fields/EntrustContractDate__c.field-meta.xml
<CustomField>
    <fullName>EntrustContractDate__c</fullName>
    <label>受託日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>