force-app/main/default/objects/AccidentReception_Management__c/fields/EntrustContractTime__c.field-meta.xml
<CustomField>
    <fullName>EntrustContractTime__c</fullName>
    <label>受託時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>