force-app/main/default/objects/AccidentReception_Management__c/fields/Entruster__c.field-meta.xml
<CustomField>
    <fullName>Entruster__c</fullName>
    <label>委託者氏名（漢字）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>