force-app/main/default/objects/AccidentReception_Management__c/fields/EntrusterKana__c.field-meta.xml
<CustomField>
    <fullName>EntrusterKana__c</fullName>
    <label>委託者氏名（カナ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>