force-app/main/default/objects/AccidentReception_Management__c/fields/EntrusterPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>EntrusterPhoneNumber__c</fullName>
    <label>委託者TEL</label>
    <type>Phone</type>
</CustomField>