force-app/main/default/objects/AccidentReception_Management__c/fields/EntrustReason__c.field-meta.xml
<CustomField>
    <fullName>EntrustReason__c</fullName>
    <label>委託理由</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>一般整備</fullName>
                <default>true</default>
                <label>一般整備</label>
            </value>
            <value>
                <fullName>定期点検整備</fullName>
            </value>
            <value>
                <fullName>車検整備</fullName>
            </value>
            <value>
                <fullName>板金</fullName>
            </value>
            <value>
                <fullName>塗装</fullName>
            </value>
            <value>
                <fullName>加工</fullName>
            </value>
            <value>
                <fullName>レッカーのみ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>