force-app/main/default/objects/AccidentReception_Management__c/fields/EntrustReasonInput__c.field-meta.xml
<CustomField>
    <fullName>EntrustReasonInput__c</fullName>
    <label>委託理由（フリー入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>