force-app/main/default/objects/AccidentReception_Management__c/fields/ExecutionUserRole__c.field-meta.xml
<CustomField>
    <fullName>ExecutionUserRole__c</fullName>
    <formula>CASE($User.UserRoleId,
 $Label.Role_TCI_ID , &quot;TCI&quot;,
 $Label.TCI_Osaka_ID , &quot;TCI&quot;,
 $Label.Admin_Osaka_ID , &quot;TCI&quot;,
 $Label.SV_Osaka_ID , &quot;TCI&quot;,
 $Label.OP_Osaka_ID , &quot;TCI&quot;,
 $Label.TCI_Tokyo_ID , &quot;TCI&quot;,
 $Label.Admin_Tokyo_ID , &quot;TCI&quot;,
 $Label.SV_Tokyo_ID , &quot;TCI&quot;,
 $Label.OP_Tokyo_ID , &quot;TCI&quot;,
 $Label.Role_WEL_ID , &quot;WEL&quot;,
 $Label.Admin_WEL_ID , &quot;WEL&quot;,
 $Label.SV_WEL_ID , &quot;WEL&quot;,
 $Label.OP_WEL_ID ,&quot;WEL&quot;,
&quot;その他&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>実行ユーザロール</label>
    <type>Text</type>
</CustomField>