force-app/main/default/objects/AccidentReception_Management__c/fields/ExpectedHospitalDayNum__c.field-meta.xml
<CustomField>
    <fullName>ExpectedHospitalDayNum__c</fullName>
    <label>通院見込み（日間）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>