force-app/main/default/objects/AccidentReception_Management__c/fields/ExpectedHospitalFromS__c.field-meta.xml
<CustomField>
    <fullName>ExpectedHospitalFromS__c</fullName>
    <label>通院見込み（開始）西暦</label>
    <type>Date</type>
</CustomField>