force-app/main/default/objects/AccidentReception_Management__c/fields/ExpectedHospitalizationFromFreeInput__c.field-meta.xml
<CustomField>
    <fullName>ExpectedHospitalizationFromFreeInput__c</fullName>
    <label>入院見込みフリー入力（開始）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>