force-app/main/default/objects/AccidentReception_Management__c/fields/ExpectedHospitalizationTo__c.field-meta.xml
<CustomField>
    <fullName>ExpectedHospitalizationTo__c</fullName>
    <label>入院見込み（終了）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>