force-app/main/default/objects/AccidentReception_Management__c/fields/ExpectedHospitalizationToS__c.field-meta.xml
<CustomField>
    <fullName>ExpectedHospitalizationToS__c</fullName>
    <label>入院見込み（終了）西暦</label>
    <type>Date</type>
</CustomField>