force-app/main/default/objects/AccidentReception_Management__c/fields/ExpectedHospitalTo__c.field-meta.xml
<CustomField>
    <fullName>ExpectedHospitalTo__c</fullName>
    <label>通院見込み（終了）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>