force-app/main/default/objects/AccidentReception_Management__c/fields/ExpectedHospitalToS__c.field-meta.xml
<CustomField>
    <fullName>ExpectedHospitalToS__c</fullName>
    <label>通院見込み（終了）西暦</label>
    <type>Date</type>
</CustomField>